--- a/module01/day10/lab-dom-race-car/index.html
+++ b/module01/day10/lab-dom-race-car/index.html
@@ -9,6 +9,7 @@
   </head>
   <body>
     <main>
+      <h1>New Font</h1>
       <!-- #game-intro is initially shown on the game start screen -->
       <div id="game-intro">
         <img src="./images/logo.png" alt="" class="logo-img" />
